[package]
name = "bevy-rdyn-plugins"
version = "0.1.0"
edition = "2021"
exclude = ["crates/"]
authors = ["zephhhhhh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdyn-plugins = { path = "crates/rdyn-plugins" }
rdyn-plugins-macros = { path = "crates/rdyn-plugins-macros" }

[workspace]
members = [
    "crates/rdyn-plugins",
    "crates/rdyn-plugins-macros"
]