[package]
name = "bevy-rdyn-plugins"
version = "0.1.0"
edition = "2021"
authors = ["zephhhhhh"]

[features]
verbose_loading = ["rdyn-plugins/verbose_loading"]

[dependencies]
rdyn-plugins = { path = "crates/rdyn-plugins" }
rdyn-plugins-macros = { path = "crates/rdyn-plugins-macros" }

[workspace]
members = [
    "crates/rdyn-plugins",
    "crates/rdyn-plugins-macros"
]